filter options for sectors fixed - left aligned

--- a/assets/scss/biz-portal.scss
+++ b/assets/scss/biz-portal.scss
@@ -214,13 +214,20 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    border-top: none;
     border-radius: 1px;
     text-decoration: none;
 
     &:hover {
       cursor: pointer;
     }
+  }
+
+  .sector-icon-and-label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
   .subtitle-business-directory-category, .location-count {
